--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,9 @@
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/schedule": "^2.2.0",
+    "@nestjs/websockets": "^9.3.9",
     "@prisma/client": "^4.10.1",
     "@types/bcrypt": "^5.0.0",
     "axios": "^1.3.4",
@@ -50,6 +52,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
